# ops

./: .gitignore  .gitreview  CMakeLists.txt  Makefile
docs/: AAA_cli.md  AAA_design.md  (+201 more)
schema/: CMakeLists.txt  README.doc.md  README.md  README.validation.md  build.cmake  configdb.ovsschema  dbschemas.cmake  dhcp_leases.extschema  dhcp_leases.xml  documentation.cmake  openswitch-idl.h  ops.metaschema.json  opsschemas.cmake  sanitize.py  vswitch.extschema  vswitch.xml  vtep.xml
schema/dhcp_leases/: master.opsschema.json
schema/dhcp_leases/common/: dhcp_lease.json
schema/legacy/: CMakeLists.txt  openswitch-dflt.h  openswitch-idl.h
schema/lib/: conf.py  empty_values_generator.py  schemas_validator.py  utils.py  validators.py  xml_generator.py
schema/openswitch/: CMakeLists.txt  master.opsschema.json
schema/openswitch/common/: aaa_server_group.json  aaa_server_group_prio.json  acl.json  acl_entry.json  bfd_session.json  bgp_aspath_filter.json  bgp_community_filter.json  bgp_neighbor.json  bgp_nexthop.json  bgp_route.json  bgp_router.json  bridge.json  bufmon.json  cli_alias.json  controller.json  cpu_rx.json  daemon.json  dhcp_relay.json  dhcp_relay_v6_mcast_server.json  dhcp_server.json  dhcpsrv_match.json  dhcpsrv_option.json  dhcpsrv_range.json  dhcpsrv_static_host.json  fan.json  flow_table.json  interface.json  led.json  logical_switch.json  mac.json  manager.json  mclag.json  mclag_remote_interface.json  mirror.json  mstp_common_instance.json  mstp_common_instance_port.json  mstp_instance.json  mstp_instance_port.json  neighbor.json  nexthop.json  (+44 more)
(+213 files in other folders)
